--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,10 +1,8 @@
 cmake_minimum_required(VERSION 3.20)
-project(Reconstructor)
+project(reconstructor)
 
 set(CMAKE_CXX_STANDARD 20)
 
-SET(CMAKE_CXX_COMPILER /opt/homebrew/Cellar/llvm/13.0.0_1/bin/clang-13)
-#SET(CMAKE_CXX_COMPILER /opt/homebrew/Cellar/gcc/11.2.0/bin/aarch64-apple-darwin20-g++-11)
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -O3")
 
 find_package(OpenCV REQUIRED)
@@ -13,8 +11,8 @@ include_directories(${OpenCV_INCLUDE_DIRS})
 include_directories(/opt/homebrew/include/eigen3)
 
 #find_library(ceres REQUIRED)
-include_directories(/opt/homebrew/Cellar/ceres-solver/2.0.0_4/include)
-include_directories(/opt/homebrew/Cellar/glog/0.5.0/include)
+include_directories(/opt/homebrew/Cellar/ceres-solver/2.1.0_1/include)
+include_directories(/opt/homebrew/Cellar/glog/0.6.0/include)
 include_directories(/opt/homebrew/Cellar/gflags/2.2.2/include)
 #include_directories(include)
 
@@ -29,10 +27,10 @@ aux_source_directory(. SRC)
 #    link_directories(/opt/homebrew/Cellar/libomp/13.0.0/lib)
 #endif ()
 
-add_executable(Reconstructor ${SRC})
+add_executable(reconstructor ${SRC})
 
-target_link_libraries(Reconstructor /opt/homebrew/Cellar/llvm/13.0.0_1/lib/libc++.dylib)
-target_link_libraries(Reconstructor ${OpenCV_LIBRARIES})
-target_link_libraries(Reconstructor /opt/homebrew/Cellar/ceres-solver/2.0.0_4/lib/libceres.dylib)
-target_link_libraries(Reconstructor /opt/homebrew/Cellar/gflags/2.2.2/lib/libgflags.dylib)
-target_link_libraries(Reconstructor /opt/homebrew/Cellar/glog/0.5.0/lib/libglog.dylib)
+#target_link_libraries(Reconstructor /opt/homebrew/Cellar/llvm/13.0.1/lib/libc++.dylib)
+target_link_libraries(reconstructor ${OpenCV_LIBRARIES})
+target_link_libraries(reconstructor /opt/homebrew/Cellar/ceres-solver/2.1.0_1/lib/libceres.dylib)
+target_link_libraries(reconstructor /opt/homebrew/Cellar/gflags/2.2.2/lib/libgflags.dylib)
+target_link_libraries(reconstructor /opt/homebrew/Cellar/glog/0.6.0/lib/libglog.dylib)
